--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       ELASTIC_PASSWORD: changeme
     networks:
       - elk
+    restart: always
 
   logstash:
     build:
@@ -46,6 +47,7 @@ services:
       - elk
     depends_on:
       - elasticsearch
+    restart: always
 
   kibana:
     build:
@@ -63,6 +65,7 @@ services:
       - elk
     depends_on:
       - elasticsearch
+    restart: always
 
 networks:
   elk:
